# datareadingrequests

./: .gitignore  .travis.yml  LICENSE.md  README.md  datareadingrequests.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  other_request.md
.github/workflows/: main.yml  pytest.yml
docs/: api-reference.rst  conf.py  index.rst
tests/: test_get_bulk.py  test_get_reading.py  test_get_value.py
