[tool.poetry]
name = "datareadingrequests"
version = "2.0.0"
description = "A client for Energize Andover's Building Energy Gateway, with a focus on clarity and usability."
authors = ["fisher <fisher521.fs@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tactlessfish/datareadingrequests"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
coveralls = "^3.2.0"
pep257 = "^0.7.0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
